@@ -77,6 +77,9 @@
     #ifndef WM_MOUSEWHEEL
         #define WM_MOUSEWHEEL           0x020A
     #endif
+    #ifndef WM_MOUSEHWHEEL
+        #define WM_MOUSEHWHEEL          0x020E
+    #endif
     #ifndef WHEEL_DELTA
         #define WHEEL_DELTA             120
     #endif
